# tokenshrink

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: feedback.md
.tokenshrink/: index.faiss  meta.json
docs/: ASSETS.md  index.html  monitoring-log.md
docs/marketing/: origin-story-post.md  reddit-log.md  reddit-posts.md  reddit-routine.md
site/: index.html
src/tokenshrink/: __init__.py  __main__.py  cli.py  pipeline.py
tests/: conftest.py  test_cli.py  test_integration.py  test_pipeline.py  test_stress.py  test_utils.py
