[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokenshrink"
version = "0.2.4"
description = "Cut your AI costs 50-80%. FAISS retrieval + LLMLingua compression + REFRAG-inspired adaptive optimization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Musashi", email = "musashimiyamoto1@icloud.com" }
]
keywords = [
    "llm",
    "tokens",
    "compression",
    "cost-reduction",
    "ai",
    "agents",
    "rag",
    "context",
    "faiss",
    "llmlingua"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
compression = [
    "llmlingua>=0.2.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
all = [
    "tokenshrink[compression,dev]",
]

[project.scripts]
tokenshrink = "tokenshrink.cli:main"

[project.urls]
Homepage = "https://tokenshrink.dev"
Repository = "https://github.com/MusashiMiyamoto1-cloud/tokenshrink"
Documentation = "https://tokenshrink.dev/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenshrink"]

[tool.ruff]
line-length = 100
target-version = "py310"
